--- a/festival/Server/festival.Server.csproj
+++ b/festival/Server/festival.Server.csproj
@@ -23,5 +23,11 @@
     <None Remove="Microsoft.Extensions.Http" />
     <None Remove="MongoDB.Bson" />
     <None Remove="MongoDB.Driver" />
+    <None Remove="Models\" />
+    <None Remove="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 </Project>
